--- a/res/layout/item_offline_list.xml
+++ b/res/layout/item_offline_list.xml
@@ -67,52 +67,148 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/offline_list_filesize"
         android:padding="0dp"
-        android:background="@color/adapters_background">
-    
-				<ImageView
+        android:background="@color/adapters_background"
+        android:orientation="horizontal">
+        
+        <RelativeLayout
+                android:id="@+id/offline_list_option_download_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+                
+             <ImageView
 		            android:id="@+id/offline_list_option_download"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_download"
-		            android:layout_weight="1"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
+    
+
+				<TextView 
+                    android:id="@+id/offline_list_option_download_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/general_download"
+                    android:layout_centerHorizontal="true"
+                    android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+       </RelativeLayout>
+       
+                   
+		<RelativeLayout
+               android:id="@+id/offline_list_option_properties_layout"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:layout_weight="1" >
 
 		        <ImageView
 		            android:id="@+id/offline_list_option_properties"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/info_ic"
-		            android:layout_weight="1"
 		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
+		            style="@style/dialogActionButton" 
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
+		        
+		         <TextView 
+                    android:id="@+id/offline_list_option_properties_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+	        </RelativeLayout>  
+	        
+		<RelativeLayout
+                android:id="@+id/offline_list_option_public_link_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
 	            
 		        <ImageView
 		            android:id="@+id/offline_list_option_public_link"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/link_ic"
-		            android:layout_weight="1"
 		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton" />	
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp" />	
+		            
+		        <TextView 
+                    android:id="@+id/offline_list_option_public_link_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_get_link_menu"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		    </RelativeLayout>
+		        
+		 <RelativeLayout
+                android:id="@+id/offline_list_option_delete_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
 		              
 		        <ImageView
 		            android:id="@+id/offline_list_option_delete"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_rubbish_bin"
-		            android:layout_weight="1"
 		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton" />
+		            style="@style/dialogActionButton" 
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
+		        
+		        <TextView 
+                    android:id="@+id/offline_list_option_delete_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/section_rubbish_bin"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		      </RelativeLayout>
+		        
+		    
+		     <RelativeLayout
+                android:id="@+id/offline_list_option_overflow_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
 		        
 		         <ImageView 
 		            android:id="@+id/offline_list_option_overflow"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_action_core_overflow"
-		            android:layout_weight="1"
 		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton"/>
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
+            
+		         </RelativeLayout>
 	        
     </LinearLayout>
     
