--- a/res/layout/activity_file_properties.xml
+++ b/res/layout/activity_file_properties.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/file_properties_top"
     tools:context=".FilePropertiesActivity" >
     
     <LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:background="@color/file_properties_top"
-
 	    android:orientation="vertical"
 	    android:weightSum="6"
 	    android:id="@+id/file_title_layout">   
