--- a/res/layout/item_contact_list.xml
+++ b/res/layout/item_contact_list.xml
@@ -87,26 +87,65 @@
         android:orientation="horizontal"
         android:padding="0dp"
         android:background="@color/adapters_background">
-        
-       
+               
+        <RelativeLayout
+                android:id="@+id/contact_list_option_properties_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+                
 	            <ImageButton
 		            android:id="@+id/contact_list_option_properties"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/info_ic"
-		            android:background="@null" 
-		            android:layout_weight="1"
-		            android:layout_gravity="center_vertical"/>
+		           style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
 	            
-	            <ImageButton
+	            <TextView 
+                    android:id="@+id/contact_list_option_properties_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+                     android:text="@string/contact_properties_activity"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+	        </RelativeLayout>    
+	         
+         <RelativeLayout
+                android:id="@+id/contact_list_option_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+	           
+             <ImageButton
 		            android:id="@+id/contact_list_option_share"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_share"
-		            android:background="@null"
-		            android:layout_weight="1"
-		            android:layout_gravity="center_vertical" />
-	        
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
+	            
+	        <TextView 
+                    android:id="@+id/contact_list_option_share_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_share_folder"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		     </RelativeLayout>
+             
 		  <!--    <ImageButton
 		            android:id="@+id/contact_list_option_send"
 		            android:layout_width="wrap_content"
@@ -116,15 +155,34 @@
 		            android:paddingTop="10dp"
 		            android:background="@null"
 		            android:layout_gravity="center_vertical" /> -->   
+	        <RelativeLayout
+                android:id="@+id/contact_list_option_remove_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
 	        
 		        <ImageButton
 		            android:id="@+id/contact_list_option_remove"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_delete"
-		            android:background="@null" 
-		            android:layout_weight="1"
-		            android:layout_gravity="center_vertical" />
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
+		        
+		      <TextView 
+                    android:id="@+id/contacts_list_option_remove_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_delete"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		      </RelativeLayout>
 
     </LinearLayout>
     
