--- a/res/layout/item_shared_folder.xml
+++ b/res/layout/item_shared_folder.xml
@@ -80,40 +80,74 @@
         android:layout_alignParentRight="true"
         android:paddingRight="15dp" />
     -->
-    <RelativeLayout
-        android:id="@+id/shared_folder_contact_options"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/shared_folder_contact_permissions"
-        android:padding="0dp"
-        android:background="@color/adapters_background">
-        
-        <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            
-            <TableRow>
-	            <ImageButton
-		            android:id="@+id/shared_folder_permissions_option"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
+       <LinearLayout 
+           android:id="@+id/shared_folder_options"
+          android:layout_width="fill_parent"
+       android:layout_height="wrap_content"
+       	android:layout_below="@id/shared_folder_contact_permissions"
+       	android:padding="0dp"
+       	android:background="@color/adapters_background"
+       	android:orientation="horizontal">
+	    
+           <RelativeLayout
+                android:id="@+id/shared_folder_permissions_option_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		           
+		         <ImageView
+		            android:id="@+id/shared_folder_option_permissions"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
 		            android:src="@drawable/permissions_ic"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical"/>
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:layout_marginTop="-10dp"/>
+		         
+		          <TextView 
+                    android:id="@+id/shared_folder_option_permissions_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/file_properties_shared_folder_change_permissions"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>	
+		           
+		     </RelativeLayout>
+           
+           <RelativeLayout
+                android:id="@+id/shared_folder_remove_share_option_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		           	
+		         <ImageView
+		            android:id="@+id/shared_folder_option_clear_share"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_clear_shares"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:layout_marginTop="-10dp"/>
+		         <TextView 
+                    android:id="@+id/shared_folder_option_clear_share_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_delete"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>	               
+		      </RelativeLayout>       
 	        
-		        <ImageButton
-		            android:id="@+id/shared_folder_remove_share_option"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_rubbish_bin"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null"
-		            android:layout_gravity="center_vertical" />
-	        </TableRow>        
-        </TableLayout>
-    </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
 
