--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -388,7 +388,38 @@
 					android:textSize="10sp"
 					android:textStyle="bold"/>
 		      </RelativeLayout>
-		      
+		    
+		    <RelativeLayout
+                android:id="@+id/file_list_option_move_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_move"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_move"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"/>
+		         
+		         <TextView 
+                    android:id="@+id/file_list_option_move_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/general_move_to"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		      </RelativeLayout>
+		   
+		    
+		    
 		    <RelativeLayout
                 android:id="@+id/file_list_option_remove_layout"
                 android:layout_width="match_parent"
