Task #1472 - New window get/send link in FileProperties

--- a/res/menu/activity_file_properties.xml
+++ b/res/menu/activity_file_properties.xml
@@ -25,6 +25,13 @@
 	    MEGA:showAsAction="never" />
 	
 	<item
+	    android:id="@+id/action_file_properties_manage_link"
+	    android:orderInCategory="110"
+	    android:showAsAction="never"
+	    android:title="@string/context_manage_link_menu"
+	    MEGA:showAsAction="never" />
+	
+	<item
 	    android:id="@+id/action_file_properties_remove_link"
 	    android:orderInCategory="110"
 	    android:showAsAction="never"
