--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -352,10 +352,22 @@
 		            android:layout_width="match_parent"
 		            android:layout_height="match_parent"
 		            android:src="@drawable/ic_rename"
-		            android:layout_gravity="center_vertical"
 		            style="@style/dialogActionButton"
 		            android:layout_centerHorizontal="true"
-	             />
+		            android:layout_alignParentTop="true"
+		            android:layout_marginTop="-10dp"/>
+		         
+		          <TextView 
+                    android:id="@+id/file_list_option_rename_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_rename"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>	    
 		           
 		         </RelativeLayout>
 		            
