FileProperties UI & bug in clearing shares

--- a/res/layout/activity_file_properties.xml
+++ b/res/layout/activity_file_properties.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/file_properties_top"
+    android:background="@color/file_properties_bottom"
     tools:context=".FilePropertiesActivity" >
     
     <LinearLayout 
@@ -78,11 +78,9 @@
 	        android:id="@+id/file_properties_switch_online"
 	        style="@style/mySwitchStyle"
 	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_height="20dp"
 	        android:layout_gravity="left|center_vertical"
-	        android:layout_marginRight="5dp"
-	        android:layout_marginLeft="5dp"	
-			android:layout_marginTop="10dp"      
+	        android:layout_margin="5dp"      
 	        mySwitch:textOff=""
 	        mySwitch:textOn=""
 	        mySwitch:textOnThumb="false"
@@ -93,11 +91,9 @@
 	        android:id="@+id/file_properties_switch_offline"
 	        style="@style/mySwitchStyle"
 	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_height="20dp"
 	        android:layout_gravity="left|center_vertical"
-	        android:layout_marginRight="5dp"
-	        android:layout_marginLeft="5dp"
-	        android:layout_marginTop="10dp"    
+	        android:layout_margin="5dp"    
 	        mySwitch:textOff=""
 	        mySwitch:textOn=""
 	        mySwitch:textOnThumb="false"
