Feature #1486 - Leave multiple shared folders in IncomingShares fragment (multiselect)

--- a/res/menu/file_browser_action.xml
+++ b/res/menu/file_browser_action.xml
@@ -55,6 +55,14 @@
         android:title="@string/context_get_link_menu"
         MEGA:showAsAction="never" />
     
+     <item
+        android:id="@+id/cab_menu_leave_multiple_share"
+        android:orderInCategory="130"
+        android:showAsAction="never"
+        android:icon="@drawable/leave_share_ic"
+        android:title="@string/context_leave_menu"
+        MEGA:showAsAction="never" />
+    
     <item
         android:id="@+id/cab_menu_trash"
         android:icon="@drawable/ic_rubbish_bin"
