--- a/res/layout/item_offline_list.xml
+++ b/res/layout/item_offline_list.xml
@@ -207,6 +207,19 @@
 		            android:layout_centerHorizontal="true"
 		            android:layout_alignParentTop="true"
 		            android:paddingTop="2dp"/>
+		         
+		         
+		         <TextView 
+                    android:id="@+id/offline_list_option_more_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_more"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
             
 		         </RelativeLayout>
 	        
