--- a/res/layout/activity_manager.xml
+++ b/res/layout/activity_manager.xml
@@ -190,9 +190,17 @@
 	            android:text="@string/my_account_used_space" 
 	            android:textColor="@color/navigation_drawer_text"
 	            android:paddingTop="10dp"
-	            android:paddingLeft="10dp"
-	            android:textSize="18sp"
+	            android:paddingLeft="12dp"
+	            android:textSize="14sp"
 	            android:layout_gravity="left|bottom" />
+
+		    <ImageView 
+		        android:id="@+id/used_space_warning"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/warning_ic"
+		        android:layout_gravity="right|bottom" 
+		        android:paddingRight="5dp" />
 		    
 		    <TextView
 		        android:id="@+id/used_space"
@@ -202,22 +210,24 @@
 	            android:textColor="@color/navigation_drawer_text"
 	            android:paddingTop="10dp"
 	            android:paddingRight="10dp"
-	            android:layout_gravity="right|bottom" />
-            
+	            android:layout_gravity="right|center_vertical" />
         </TableRow>
         
         <TableRow>
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_span="2">
+                android:layout_span="3">
 	            
                 <ProgressBar
 				    android:id="@+id/manager_used_space_bar"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content" 
 					style="@style/MEGAProgressBar"  
-					android:layout_margin="5dip" />
+					android:layout_marginLeft="12dip"
+					android:layout_marginRight="12dip"
+					android:layout_marginBottom="12dip"
+					android:layout_marginTop="9dip" />
             </RelativeLayout>
         </TableRow>
 		
