--- a/res/layout/activity_file_properties.xml
+++ b/res/layout/activity_file_properties.xml
@@ -41,7 +41,8 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center_horizontal"
-	        android:layout_marginBottom="10dp"
+	        android:layout_marginBottom="20dp"
+	        android:layout_marginTop="-10dp"
 	        android:layout_weight="1"
 	        android:textColor="@color/white"/>
 
@@ -63,42 +64,49 @@
              android:text="@string/file_properties_available_offline"
 			 android:layout_gravity="left|center_vertical"
 			 android:textStyle="bold"
-			 android:textColor="@color/white" />
+			 android:textColor="@color/white"
+			 android:layout_weight="5" />
                
            <TextView
              android:id="@+id/file_properties_available_offline_on"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
+             android:gravity="right"
              android:text="@string/file_properties_available_offline_off"
 			 android:layout_gravity="left|center_vertical"
 			 android:textStyle="bold"
-			 android:textColor="@color/white" />
+			 android:textColor="@color/white" 
+			 android:layout_weight="1"/>
                
            	<nz.mega.components.MySwitch
-	        android:id="@+id/file_properties_switch_online"
-	        style="@style/mySwitchStyle"
-	        android:layout_width="wrap_content"
-	        android:layout_height="20dp"
-	        android:layout_gravity="left|center_vertical"
-	        android:layout_margin="7dp"      
-	        mySwitch:textOff=""
-	        mySwitch:textOn=""
-	        mySwitch:textOnThumb="false"
-	        mySwitch:thumb="@drawable/switch_thumb"
-	        mySwitch:track="@drawable/switch_track_online" />
+		        android:id="@+id/file_properties_switch_online"
+		        style="@style/mySwitchStyle"
+		        android:layout_width="wrap_content"
+		        android:layout_height="20dp"
+		        android:layout_gravity="right|center_vertical"
+		    	android:layout_margin="5dp"
+		        android:gravity="right"     
+		        mySwitch:textOff=""
+		        mySwitch:textOn=""
+		        mySwitch:textOnThumb="false"
+		        mySwitch:thumb="@drawable/switch_thumb"
+		        mySwitch:track="@drawable/switch_track_online" 
+		        android:layout_weight="1"/>
            	
            	<nz.mega.components.MySwitch
 	        android:id="@+id/file_properties_switch_offline"
 	        style="@style/mySwitchStyle"
 	        android:layout_width="wrap_content"
 	        android:layout_height="20dp"
-	        android:layout_gravity="left|center_vertical"
-	        android:layout_margin="7dp"    
+	        android:gravity="right"
+	        android:layout_gravity="right|center_vertical"
+	        android:layout_margin="5dp"
 	        mySwitch:textOff=""
 	        mySwitch:textOn=""
 	        mySwitch:textOnThumb="false"
 	        mySwitch:thumb="@drawable/switch_thumb"
-	        mySwitch:track="@drawable/switch_track_offline" />
+	        mySwitch:track="@drawable/switch_track_offline"
+	        android:layout_weight="1" />
                
          <TextView
              android:id="@+id/file_properties_available_offline_off"
@@ -107,7 +115,10 @@
              android:layout_gravity="left|center_vertical"
              android:text="@string/file_properties_available_offline_on"
              android:textColor="@color/white"
-			 android:textStyle="bold" />
+			 android:textStyle="bold"
+			 android:layout_marginLeft="-5dp"
+			 android:layout_marginRight="15dp"
+			 android:layout_weight="1" />
  	
    		    
        </LinearLayout>         
@@ -119,29 +130,30 @@
        	 android:layout_height="wrap_content" 
        	 android:layout_gravity="center"
        	 android:background="@color/file_properties_bottom"
-       	 android:layout_below="@id/available_offline_layout" >
+       	 android:layout_below="@id/available_offline_layout"
+       	 android:layout_marginTop="10dp" >
          
          <TableRow >
              
               <TextView
-             android:id="@+id/file_properties_permission_label"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="@string/file_properties_shared_folder_permissions"
-             android:textColor="@color/file_properties_info_menu"
-			 android:layout_gravity="center_vertical|left"
-			 android:textStyle="bold"
-			 android:paddingLeft="30dp"
-			 android:paddingTop="7dp" />   
+	             android:id="@+id/file_properties_permission_label"
+	             android:layout_width="wrap_content"
+	             android:layout_height="wrap_content"
+	             android:text="@string/file_properties_shared_folder_permissions"
+	             android:textColor="@color/file_properties_info_menu"
+				 android:layout_gravity="center_vertical|left"
+				 android:textStyle="bold"
+				 android:paddingLeft="30dp"
+				 android:paddingTop="7dp" />   
              
         	<TextView
-             android:id="@+id/file_properties_permission_info"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:textColor="@color/white"
-			 android:layout_gravity="center_vertical|left" 
-			 android:paddingLeft="4dp"
-			 android:paddingTop="7dp"/>         
+	             android:id="@+id/file_properties_permission_info"
+	             android:layout_width="wrap_content"
+	             android:layout_height="wrap_content"
+	             android:textColor="@color/white"
+				 android:layout_gravity="center_vertical|left" 
+				 android:paddingLeft="18dp"
+				 android:paddingTop="7dp"/>         
                          
              
          </TableRow>
@@ -165,7 +177,7 @@
 		             android:layout_height="wrap_content"
 		             android:textColor="@color/white"
 					 android:layout_gravity="center_vertical|left" 
-					 android:paddingLeft="4dp"
+					 android:paddingLeft="18dp"
 					 android:paddingTop="7dp"/>
          </TableRow>            
           
@@ -187,7 +199,7 @@
 		             android:layout_height="wrap_content"
 		             android:textColor="@color/white"
 					 android:layout_gravity="center_vertical|left" 
-					 android:paddingLeft="4dp"
+					 android:paddingLeft="18dp"
 					 android:paddingTop="7dp"/>
          </TableRow>      
          
@@ -210,7 +222,7 @@
 		             android:layout_height="wrap_content"
 		             android:textColor="@color/white"
 					 android:layout_gravity="center_vertical|left"
-					 android:paddingLeft="4dp"
+					 android:paddingLeft="18dp"
 					 android:paddingTop="7dp" />
          </TableRow>
          
@@ -233,7 +245,7 @@
 		             android:layout_height="wrap_content"
 		             android:textColor="@color/white"
 					 android:layout_gravity="center_vertical|left"
-					 android:paddingLeft="4dp"
+					 android:paddingLeft="18dp"
 					 android:paddingTop="7dp"
 					 android:paddingBottom="15dp" />
          </TableRow>
