--- a/res/layout/activity_login_returning.xml
+++ b/res/layout/activity_login_returning.xml
@@ -149,7 +149,7 @@
 		        android:id="@+id/login_mega_logo"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:src="@drawable/mega_ic"
+		        android:src="@drawable/logo_loading_ic"
 		        android:layout_marginTop="20dp"/>
 		    
 		    <TextView
