--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -14,7 +14,7 @@
         <!-- Drawable to use as the "thumb" that switches back and forth. -->
         <attr name="thumb"  format="reference"/>
         <!-- Drawable to use as the "track" that the switch thumb slides within. -->
-        <attr name="track" format="reference" />
+        <attr name="trackMySwitch" format="reference" />
         <!-- Text to use when the switch is in the checked/"on" state. -->
         <attr name="textOn" format="reference|string" />
         <!-- Text to use when the switch is in the unchecked/"off" state. -->
@@ -32,17 +32,17 @@
         <!-- if the thumb should be allowed to move more beyond the switch boundaries -->
         <attr name="thumbExtraMovement" format="dimension" />
         <!-- Amount of padding on either side of text within the switch thumb. -->
-        <attr name="thumbTextPadding" format="dimension" />
+        <attr name="thumbTextPaddingMySwitch" format="dimension" />
         <!-- Amount of padding on either side of text within the switch track. -->
         <attr name="trackTextPadding" format="dimension" />
         <!-- TextAppearance style for text displayed on the switch thumb. -->
         <attr name="switchTextAppearanceAttrib" format="reference" />
         <!-- Minimum width for the switch component -->
-        <attr name="switchMinWidth" format="dimension" />
+        <attr name="switchMinWidthMySwitch" format="dimension" />
         <!-- Minimum height for the switch component -->
         <attr name="switchMinHeight" format="dimension" />
         <!-- Minimum space between the switch and caption text -->
-        <attr name="switchPadding" format="dimension" />
+        <attr name="switchPaddingMySwitch" format="dimension" />
         
         <attr name="orientation" >
             <!-- the switch moves only on the x-axis(horizontally) -->
