--- a/res/layout/fragment_filebrowserlist.xml
+++ b/res/layout/fragment_filebrowserlist.xml
@@ -62,13 +62,46 @@
              android:text="@string/general_upload" />
       </LinearLayout>    
       
+      <LinearLayout
+         android:id="@+id/out_space"
+    	 android:layout_width="fill_parent"
+    	 android:layout_height="wrap_content"
+    	 android:layout_alignParentBottom="true"
+    	 android:layout_gravity="center|fill_horizontal"
+    	 android:layout_centerHorizontal="true"
+    	 android:orientation="vertical">
+
+		<TextView
+		    android:id="@+id/out_space_text"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:textColor="@color/white"
+		    android:textStyle="bold"
+		    android:paddingTop="20dp"
+		    android:paddingBottom="20dp"
+		    android:paddingLeft="20dp"
+		    android:paddingRight="20dp"
+		    android:gravity="center"
+		    android:background="@color/navigation_drawer_background"
+		    android:textSize="16sp"
+		    android:text="@string/warning_out_space"/>  
+         
+         <Button
+            android:id="@+id/out_space_btn"
+       		android:layout_height="48dp"       		
+       		android:layout_width="fill_parent"
+            android:background="@drawable/btn_default_holo_light_without_corners"
+            android:textColor="@color/button_text"
+            android:text="@string/my_account_upgrade_pro" />
+      </LinearLayout>    
+      
       <ListView
         android:id="@+id/file_list_view_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:choiceMode="multipleChoice"
         android:layout_below="@id/content_text"
-        android:layout_above="@id/buttons_layout">
+        android:layout_above="@id/out_space">
     </ListView>
 	
       <Button
