--- a/res/layout/fragment_filebrowserlist.xml
+++ b/res/layout/fragment_filebrowserlist.xml
@@ -62,6 +62,7 @@
              android:text="@string/general_upload" />
       </LinearLayout>    
       
+     <!-- 
       <LinearLayout
          android:id="@+id/out_space"
     	 android:layout_width="fill_parent"
@@ -103,7 +104,16 @@
         android:layout_below="@id/content_text"
         android:layout_above="@id/buttons_layout">
     </ListView>
+    --> 
     
+    <ListView
+        android:id="@+id/file_list_view_browser"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" 
+        android:choiceMode="multipleChoice"
+        android:layout_below="@id/content_text"
+        android:layout_above="@id/buttons_layout">
+    </ListView>
       <Button
        	android:id="@+id/file_list_browser_camera_upload_on_off"
        	android:layout_gravity="center"
