--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -51,6 +51,14 @@
 		android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />
 	
+		<item
+	    android:id="@+id/action_import_link"
+	    android:orderInCategory="110"
+	    android:showAsAction="never"
+	    android:title="@string/action_import_link"
+		android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
+	
 	<item
 	    android:id="@+id/action_select"
 	    android:orderInCategory="110"
