--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -42,6 +42,14 @@
 	    android:title="@string/menu_pause_transfers"
 	    android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />
+	
+	<item
+	    android:id="@+id/action_take_picture"
+	    android:orderInCategory="100"
+	    android:showAsAction="never"
+	    android:title="@string/menu_take_picture"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
 
 	<item
 	    android:id="@+id/action_new_folder"
