--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -63,7 +63,7 @@
 	    android:id="@+id/action_import_link"
 	    android:orderInCategory="110"
 	    android:showAsAction="never"
-	    android:title="@string/action_import_link"
+	    android:title="@string/action_open_link"
 		android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />
 	
