Feature 1669 - Display in Incoming Shared Items who they are from.

--- a/res/layout/activity_file_properties.xml
+++ b/res/layout/activity_file_properties.xml
@@ -45,7 +45,16 @@
 	        android:layout_marginTop="-10dp"
 	        android:layout_weight="1"
 	        android:textColor="@color/white"/>
-
+	     
+	     <TextView
+	        android:id="@+id/file_properties_owner_info"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal"
+	        android:layout_marginBottom="20dp"
+	        android:layout_marginTop="-10dp"
+	        android:layout_weight="1"
+	        android:textColor="@color/white"/>   
 	
 	  </LinearLayout>
          
@@ -118,11 +127,9 @@
 			 android:textStyle="bold"
 			 android:layout_marginLeft="-5dp"
 			 android:layout_marginRight="15dp"
-			 android:layout_weight="1" />
- 	
+			 android:layout_weight="1" /> 	
    		    
        </LinearLayout>         
-
      
      <TableLayout 
          android:id="@+id/file_properties_layout"
@@ -157,8 +164,7 @@
                          
              
          </TableRow>
-                
-                  
+
          <TableRow>
              <TextView
 		             android:id="@+id/file_properties_info_menu_size"
