--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_secondary"
+    android:stackFromBottom="true"
+    android:id="@+id/scroll_view_login"
     tools:context=".LoginActivity" >
 
 	<LinearLayout 
