--- a/res/menu/file_browser_action.xml
+++ b/res/menu/file_browser_action.xml
@@ -24,6 +24,15 @@
         MEGA:showAsAction="never" />
     
     <item
+        android:id="@+id/cab_menu_share"
+        android:icon="@drawable/ic_menu_download_dark"
+        android:orderInCategory="105"
+        android:showAsAction="never"
+        android:title="@string/context_share_folder"
+        android:visible="false"
+        MEGA:showAsAction="never" />
+    
+    <item
         android:id="@+id/cab_menu_rename"
         android:icon="@drawable/ic_menu_rename_dark"
         android:orderInCategory="110"
