Feature #1915 - Camera Uploads only when charging

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -37,6 +37,10 @@
 	        android:entries="@array/settings_camera_upload_file_upload_entries"
 	        android:entryValues="@array/settings_camera_upload_file_upload_values" />
 		
+		<nz.mega.components.TwoLineCheckPreference
+            android:key="settings_camera_upload_charging"
+        	android:title="@string/settings_camera_upload_charging" />
+		
 		<Preference
 	        android:key="settings_camera_upload_folder"
 	        android:title="@string/settings_camera_upload_folder" />
